# Backend/routes/user.js
@@ -13,29 +13,20 @@ router.post('/signup', async (req, res, next) => {
     // #swagger.description = '회원가입 하는 유저의 아이디, username 중복검사 및 가입 하는 유저의 정보를 데이터베이스에 저장'
     /*  #swagger.responses[400] = {
             description: '접근 방식 오류',
-            schema: {
-                message: '접근 방식 오류'
-            }
         } */
     /*  #swagger.responses[409] = {
-            description: '이미 존재하는 아이디나 username 입니다.',
-            schema: {
-                message: '이미 존재하는 아이디나 username 입니다.'
-            }
+            description: '이미 존재하는 아이디나 username',
         } */
     /*  #swagger.responses[500] = {
             description: '회원가입 정보 불러오기 실패',
-            schema: {
-                message: '회원가입 정보 불러오기 실패'
-            }
     } */
-    /* #swagger.parameters['id'] = { 
+    /* #swagger.parameters['login_id'] = { 
         in: 'query',
         description: '사용자의 아이디', 
         required: true,
         type: 'string',
         example: 'minki',
-    } */
+    } */     
     /* #swagger.parameters['password'] = {
         in: 'query',
         description: '비밀번호',
@@ -43,7 +34,7 @@ router.post('/signup', async (req, res, next) => {
         type: 'string',
         example: '0000'
     } */
-    /* #swagger.parameters['username'] = {
+    /* #swagger.parameters['name'] = {
         in: 'query',
         description: '닉네임',
         required: true,
@@ -52,18 +43,18 @@ router.post('/signup', async (req, res, next) => {
     }*/
 
     try {
-        const { id, password, username } = req.query;
+        const { login_id, password, name } = req.query;
 
         // 유효한 정보인지 검사하는 기능
-        if (!id || !password || !username) {
+        if (!login_id || !password || !name) {
             res.status(400).json({ error: '유효하지 않은 접근입니다. 아이디, 비밀번호, username을 입력해주세요.' });
             return;
         }
 
         // username과 아이디 중복 체크
         const connection = db.getConnection();
-        const checkQuery = 'SELECT * FROM users WHERE username = ? OR id = ?';
-        connection.query(checkQuery, [username, id], (checkError, checkResults) => {
+        const checkQuery = 'SELECT * FROM user WHERE name = ? OR login_id = ?';
+        connection.query(checkQuery, [name, login_id], (checkError, checkResults) => {
             if (checkError) {
                 console.error('Error during signup check:', checkError);
                 res.status(500).json({ error: 'Internal Server Error' });
@@ -75,8 +66,8 @@ router.post('/signup', async (req, res, next) => {
                 res.status(409).json({ error: '이미 존재하는 아이디 또는 username 입니다. 다시 입력해주세요.' });
             } else {
                 // 존재하지 않는 경우, 사용자 정보를 데이터베이스에 저장
-                const insertQuery = 'INSERT INTO users (id, password, username) VALUES (?, ?, ?)';
-                connection.query(insertQuery, [id, password, username], (insertError, insertResults) => {
+                const insertQuery = 'INSERT INTO user (login_id, password, name) VALUES (?, ?, ?)';
+                connection.query(insertQuery, [login_id, password, name], (insertError, insertResults) => {
                     if (insertError) {
                         console.error('Error during signup:', insertError);
                         res.status(500).json({ error: 'Internal Server Error' });
@@ -94,73 +85,63 @@ router.post('/signup', async (req, res, next) => {
 });
 
 // 로그인 API
-router.post('/login', (req, res, next) => {
+router.post('/login', async (req, res, next) => {
     // #swagger.tags = ['User']
-    // #swagger.summary = '로그인 API'
-    // #swagger.description = '사용자의 아이디와 비밀번호를 받아 로그인을 수행하고, 성공 시 액세스 토큰과 리프레시 토큰을 반환합니다.'
-    /* #swagger.parameters['body'] = {
+    // #swagger.summary = "로그인"
+    // #swagger.description = '아이디와 비밀번호를 이용하여 로그인을 수행하고, 성공 시 액세스 토큰과 리프레시 토큰을 발급'
+    /*  #swagger.responses[400] = {
+            description: '접근 방식 오류',
+        } */
+    /*  #swagger.responses[401] = {
+            description: '유효하지 않은 아이디 또는 비밀번호',
+        } */
+    /*  #swagger.responses[500] = {
+            description: '로그인 정보 불러오기 실패',
+    } */
+    /* #swagger.parameters['body'] = { 
         in: 'body',
-        description: '로그인 정보',
+        description: '사용자의 아이디', 
         required: true,
-            id : 'test',
-            password : '123'
+        schema: {
+            log_in: " ",
+            password: " ",
+            
         }
     } */
-    /* #swagger.responses[200] = { 
-           description: '로그인 성공',
-           schema: {
-               status: "success",
-               statusCode: 200,
-               data: {
-                   message: "성공적으로 로그인이 완료되었습니다!",
-                   accessToken: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InRlc3QiLCJ1c2VybmFtZSI6InRlc3ROYW1lIiwiaWF0IjoxNzA0OTYyMTIyLCJleHAiOjE3MDQ5NjU3MjJ9.ziYSVP8XfBiwV6bAuMizpUclMJQw6sK3AceNXiGR-0I",
-                   refreshToken: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InRlc3QiLCJ1c2VybmFtZSI6InRlc3ROYW1lIiwiaWF0IjoxNzA0OTYyMTIyLCJleHAiOjE3MDUyMjEzMjJ9._hVLt5hY1kywTaFSm0FL0G9nsHXVYK_PcDo8YqAq8hI"
-               }
-           }
-    } */
-    /* #swagger.responses[401] = { 
-           description: '유효하지 않은 아이디 또는 비밀번호'
-    } */
-    /* #swagger.responses[500] = { 
-           description: '서버 내부 오류'
-    } */
 
-    const { id, password } = req.body;
-    const connection = db.getConnection();
-    const query = 'SELECT * FROM users WHERE id = ? AND password = ?';
+    try {
+        const {login_id, password } = req.body;
 
-    connection.query(query, [id, password], (err, results) => {
-        if (err) {
-            console.error('로그인 중 데이터베이스 조회 에러:', err);
-            res.locals = { success: false, status: 500, data: { error: '서버 내부 오류' } };
-            return next();
-        }
+        // 디비로부터 사용자 정보 조회
+        const connection = db.getConnection();
+        const query = 'SELECT * FROM user WHERE login_id = ? AND password = ?';
+        connection.query(query, [login_id, password], (error, results) => {
+            if (error) {
+                console.error('Error during login:', error);
+                res.status(500).json({ error: 'Internal Server Error' });
+                return;
+            }
 
-        if (results.length > 0) {
-            const user = results[0];
+            if (results.length > 0) {
+                // 디비와 일치하는 사용자 정보가 있는 경우
 
-            // 토큰 생성
-            const accessToken = jwt.sign({ id, username: user.username }, 'your_secret_key_for_access_token', { expiresIn: '1h' });
-            const refreshToken = jwt.sign({ id, username: user.username }, 'your_secret_key_for_refresh_token', { expiresIn: '3d' });
+                // 로그인 성공 시, 액세스 토큰과 리프레시 토큰 발급 및 응답
+                const accessToken = jwt.sign({ login_id, name: results[0].name }, 'your_secret_key_for_access_token', { expiresIn: '1h' });
+                const refreshToken = jwt.sign({ login_id, name: results[0].name }, 'your_secret_key_for_refresh_token', { expiresIn: '3d' });
 
-            // 리프레시 토큰 저장
-            const updateRefreshTokenQuery = 'UPDATE users SET refresh_token = ? WHERE id = ?';
-            connection.query(updateRefreshTokenQuery, [refreshToken, id], (err) => {
-                if (err) {
-                    console.error('리프레시 토큰 업데이트 에러:', err);
-                    res.locals = { success: false, status: 500, data: { error: '리프레시 토큰 업데이트 중 오류가 발생했습니다.' } };
-                    return next();
-                }
-
-                res.locals = { status: 200, data: { message: '성공적으로 로그인이 완료되었습니다!', accessToken, refreshToken } };
+                // 발급받은 토큰을 응답에 담아 클라이언트로 전송
+                res.locals.data = { message: '성공적으로 로그인이 완료되었습니다!', accessToken, refreshToken };
                 next();
-            });
-        } else {
-            res.locals = { success: false, status: 401, data: { error: '유효하지 않은 아이디 또는 비밀번호 입니다.' } };
-            next();
-        }
-    });
-}, commonResponse);
+            } else {
+                // 디비와 일치하는 사용자 정보가 없는 경우
+                res.status(401).json({ error: '유효하지 않은 아이디 또는 비밀번호 입니다.' });
+            }
+        });
+    } catch (error) {
+        console.error('Error during login:', error);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
 
 // 로그아웃 API
 router.post('/logout', (req, res, next) => {
