# Backend/swagger/swagger_output.json
@@ -489,7 +489,7 @@
         "description": "회원가입 하는 유저의 아이디, username 중복검사 및 가입 하는 유저의 정보를 데이터베이스에 저장",
         "parameters": [
           {
-            "name": "id",
+            "name": "login_id",
             "in": "query",
             "description": "사용자의 아이디",
             "required": true,
@@ -505,7 +505,7 @@
             "example": "0000"
           },
           {
-            "name": "username",
+            "name": "name",
             "in": "query",
             "description": "닉네임",
             "required": true,
@@ -518,49 +518,13 @@
             "description": "OK"
           },
           "400": {
-            "description": "접근 방식 오류",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "접근 방식 오류"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+            "description": "접근 방식 오류"
           },
           "409": {
-            "description": "이미 존재하는 아이디나 username 입니다.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "이미 존재하는 아이디나 username 입니다."
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+            "description": "이미 존재하는 아이디나 username"
           },
           "500": {
-            "description": "회원가입 정보 불러오기 실패",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "회원가입 정보 불러오기 실패"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+            "description": "회원가입 정보 불러오기 실패"
           }
         }
       }
@@ -570,71 +534,41 @@
         "tags": [
           "User"
         ],
-        "summary": "로그인 API",
-        "description": "사용자의 아이디와 비밀번호를 받아 로그인을 수행하고, 성공 시 액세스 토큰과 리프레시 토큰을 반환합니다.",
+        "summary": "로그인",
+        "description": "아이디와 비밀번호를 이용하여 로그인을 수행하고, 성공 시 액세스 토큰과 리프레시 토큰을 발급",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "사용자의 아이디",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "log_in": {
+                  "type": "string",
+                  "example": " "
                 },
                 "password": {
-                  "example": "any"
+                  "type": "string",
+                  "example": " "
                 }
               }
-            },
-            "description": "로그인 정보",
-            "required": true,
-            "id": "test",
-            "password": "123"
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "로그인 성공",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "success"
-                },
-                "statusCode": {
-                  "type": "number",
-                  "example": 200
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "성공적으로 로그인이 완료되었습니다!"
-                    },
-                    "accessToken": {
-                      "type": "string",
-                      "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InRlc3QiLCJ1c2VybmFtZSI6InRlc3ROYW1lIiwiaWF0IjoxNzA0OTYyMTIyLCJleHAiOjE3MDQ5NjU3MjJ9.ziYSVP8XfBiwV6bAuMizpUclMJQw6sK3AceNXiGR-0I"
-                    },
-                    "refreshToken": {
-                      "type": "string",
-                      "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InRlc3QiLCJ1c2VybmFtZSI6InRlc3ROYW1lIiwiaWF0IjoxNzA0OTYyMTIyLCJleHAiOjE3MDUyMjEzMjJ9._hVLt5hY1kywTaFSm0FL0G9nsHXVYK_PcDo8YqAq8hI"
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+            "description": "OK"
+          },
+          "400": {
+            "description": "접근 방식 오류"
           },
           "401": {
             "description": "유효하지 않은 아이디 또는 비밀번호"
           },
           "500": {
-            "description": "서버 내부 오류"
+            "description": "로그인 정보 불러오기 실패"
           }
         }
       }
@@ -773,26 +707,14 @@
             "type": "string"
           },
           {
-            "name": "user_id",
-            "in": "query",
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "결과 및 카드 데이터 성공적으로 삭제됨.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "삭제 성공"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
@@ -801,26 +723,9 @@
             "description": "Forbidden"
           },
           "500": {
-            "description": "내부 서버 오류로 인한 DB 쿼리 실패.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "DB 쿼리 오류"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+            "description": "Internal Server Error"
           }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
+        }
       }
     },
     "/test/user/info": {
